<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoriesActivity"
    android:background="@drawable/bg13">

    <TextView
        android:id="@+id/tvLeaveStories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgStories"/>

    <EditText
        android:id="@+id/edStories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLeaveStories"
        android:layout_alignParentStart="true"
        android:hint="@string/story" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/saveStories"
        android:onClick="btRegisterStories"
        android:background="@drawable/buttonsstyleselector"
        android:layout_marginLeft="115dp"/>

</RelativeLayout>